--- a/app/src/main/res/layout/activity_vehiculo.xml
+++ b/app/src/main/res/layout/activity_vehiculo.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="#2D2D2D"
     android:backgroundTint="#2D2D2D"
-    tools:context=".Entregas">
+    tools:context=".Vehiculo">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -42,8 +42,8 @@
 
         <ImageView
             android:id="@+id/img_troca"
-            android:layout_width="361dp"
-            android:layout_height="161dp"
+            android:layout_width="356dp"
+            android:layout_height="142dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
@@ -60,7 +60,7 @@
             android:fontFamily="@font/omnes_semibold"
             android:text="@string/Modelo_Static"
             android:textColor="#FFFFFF"
-            android:textSize="34sp"
+            android:textSize="30sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.053"
             app:layout_constraintStart_toStartOf="parent"
@@ -74,7 +74,7 @@
             android:fontFamily="@font/omnes_semibold"
             android:text="@string/Color_Static"
             android:textColor="#FFFFFF"
-            android:textSize="34sp"
+            android:textSize="30sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.048"
             app:layout_constraintStart_toStartOf="parent"
@@ -86,13 +86,13 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
             android:fontFamily="@font/omnes_semibold"
-            android:text="@string/Poliza_Static"
+            android:text="@string/Poliza"
             android:textColor="#FFFFFF"
-            android:textSize="34sp"
+            android:textSize="30sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.092"
+            app:layout_constraintHorizontal_bias="0.049"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_static_verificacion" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_static_empresaSeguro" />
 
         <TextView
             android:id="@+id/tv_static_verificacion"
@@ -102,11 +102,25 @@
             android:fontFamily="@font/omnes_semibold"
             android:text="@string/Verificacion_Static"
             android:textColor="#FFFFFF"
-            android:textSize="34sp"
+            android:textSize="30sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.067"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_static_placas" />
+
+        <TextView
+            android:id="@+id/tv_static_empresaSeguro"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:fontFamily="@font/omnes_semibold"
+            android:text="@string/Aseguradora"
+            android:textColor="#FFFFFF"
+            android:textSize="30sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.064"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_static_verificacion" />
 
         <TextView
             android:id="@+id/tv_static_placas"
@@ -116,41 +130,27 @@
             android:fontFamily="@font/omnes_semibold"
             android:text="@string/Placas_Static"
             android:textColor="#FFFFFF"
-            android:textSize="34sp"
+            android:textSize="30sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.05"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_static_color" />
 
         <Button
-            android:id="@+id/btn_entregas_entregas"
-            android:layout_width="175dp"
-            android:layout_height="50dp"
-            android:layout_marginTop="36dp"
-            android:background="@drawable/rounded_corners"
-            android:backgroundTint="@color/amarillo_bamx"
-            android:fontFamily="@font/omnes_semibold"
-            android:text="@string/Entregas"
-            android:textColor="#000000"
-            android:textSize="24sp"
-            app:layout_constraintEnd_toStartOf="@+id/btn_vehiculo_inventario"
-            app:layout_constraintHorizontal_bias="0.347"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_static_poliza" />
-
-        <Button
             android:id="@+id/btn_vehiculo_inventario"
-            android:layout_width="175dp"
-            android:layout_height="50dp"
-            android:layout_marginTop="36dp"
-            android:layout_marginEnd="16dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
             android:background="@drawable/rounded_corners"
             android:backgroundTint="@color/amarillo_bamx"
             android:fontFamily="@font/omnes_semibold"
+            android:paddingLeft="20sp"
+            android:paddingRight="20sp"
             android:text="@string/Inventario"
             android:textColor="#000000"
-            android:textSize="24sp"
+            android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_static_poliza" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
