Iconos Se agregaron íconos correspondientes a algunos socios estratégicos y de los botones del menú principal.
Rutas
Ahora se muestran las ubicaciones en el mapa de los socios estratégicos.
Si el usuario hace click en algún marcador, tendrá la opción de abrir Google Maps para guiarlo hasta su destino.

Vehiculo
Ahora los TextView están contenidos en un Linear Layout.

--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -53,7 +53,7 @@
                 android:background="@drawable/rounded_corners25"
                 android:padding="35px"
                 android:scaleType="centerInside"
-                app:srcCompat="@drawable/boxicon" />
+                app:srcCompat="@drawable/deliveryicon" />
 
             <ImageButton
                 android:id="@+id/btn_rutas"
@@ -65,7 +65,7 @@
                 android:paddingRight="15dp"
                 android:paddingBottom="15dp"
                 android:scaleType="centerInside"
-                app:srcCompat="@drawable/maps" />
+                app:srcCompat="@drawable/mapicon" />
         </LinearLayout>
 
         <LinearLayout
@@ -117,7 +117,7 @@
                 android:background="@drawable/rounded_corners25"
                 android:padding="35px"
                 android:scaleType="centerInside"
-                app:srcCompat="@drawable/superama"/>
+                app:srcCompat="@drawable/boxicon" />
 
             <ImageButton
                 android:id="@+id/btn_entregas"
@@ -126,7 +126,7 @@
                 android:layout_marginStart="20sp"
                 android:background="@drawable/rounded_corners25"
                 android:scaleType="centerInside"
-                app:srcCompat="@drawable/silverado" />
+                app:srcCompat="@drawable/deliverytruckicon" />
         </LinearLayout>
 
         <LinearLayout
@@ -180,7 +180,7 @@
                 android:background="@drawable/rounded_corners25"
                 android:padding="35px"
                 android:scaleType="centerInside"
-                app:srcCompat="@drawable/usuario" />
+                app:srcCompat="@drawable/profile" />
 
             <ImageButton
                 android:id="@+id/btn_vehiculo"
@@ -191,7 +191,7 @@
                 android:background="@drawable/rounded_corners25"
                 android:padding="35px"
                 android:scaleType="centerInside"
-                app:srcCompat="@drawable/mercedesbenz" />
+                app:srcCompat="@drawable/pickuptruckicon" />
         </LinearLayout>
 
         <LinearLayout
