--- a/app/src/main/res/layout/activity_entregas2.xml
+++ b/app/src/main/res/layout/activity_entregas2.xml
@@ -38,7 +38,7 @@
                 android:layout_width="82dp"
                 android:layout_height="50dp"
                 android:layout_marginStart="116dp"
-                android:src="@drawable/mercedesbenz" />
+                android:src="@drawable/deliverytruckicon" />
         </LinearLayout>
 
         <ListView
