--- a/app/src/main/res/layout/activity_rutas.xml
+++ b/app/src/main/res/layout/activity_rutas.xml
@@ -57,8 +57,8 @@
             <fragment
                 android:id="@+id/mapFragment"
                 android:name="com.google.android.gms.maps.SupportMapFragment"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
         </LinearLayout>
 
         <TextView
