--- a/app/src/main/res/layout/socio_layout.xml
+++ b/app/src/main/res/layout/socio_layout.xml
@@ -16,6 +16,7 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
             android:layout_marginEnd="10dp"
             android:orientation="vertical"
             android:padding="5dp">
