--- a/app/src/main/res/layout/almacen_layout.xml
+++ b/app/src/main/res/layout/almacen_layout.xml
@@ -9,7 +9,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:background="@drawable/rounded_listview"
         android:orientation="horizontal">
 
@@ -29,23 +29,24 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <TextView
                 android:id="@+id/tv_NombreAlmacen"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/omnes_bold"
+                android:fontFamily="@font/omnes_semibold"
+                android:paddingBottom="5dp"
                 android:text="TextView"
-                android:textColor="#FFFFFF"
+                android:textColor="@color/amarillo_bamx"
                 android:textSize="21sp" />
 
             <TextView
                 android:id="@+id/tv_DirAlmacen"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/omnes_medium"
+                android:fontFamily="@font/omnes_semibold"
                 android:text="TextView"
                 android:textColor="#FFFFFF"
                 android:textSize="18sp" />
