--- a/app/src/main/res/layout/activity_entregasinventario.xml
+++ b/app/src/main/res/layout/activity_entregasinventario.xml
@@ -43,9 +43,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="32dp"
             android:layout_marginEnd="8dp"
             android:background="@drawable/rounded_listview"
+            android:backgroundTint="@color/amarillo_bamx"
             android:orientation="vertical"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -58,7 +59,7 @@
                 android:layout_gravity="center|center_vertical"
                 android:fontFamily="@font/omnes_semibold"
                 android:text="@string/Inventario"
-                android:textColor="#FFFFFF"
+                android:textColor="#000000"
                 android:textSize="34sp" />
 
         </LinearLayout>
@@ -68,7 +69,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="32dp"
             android:layout_marginEnd="8dp"
             android:background="@drawable/rounded_listview"
             android:orientation="vertical"
@@ -91,7 +92,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:fontFamily="@font/omnes_semibold"
+                android:fontFamily="@font/omnes_medium"
                 android:text="TextView"
                 android:textColor="#FFFFFF"
                 android:textSize="28sp" />
@@ -125,7 +126,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:fontFamily="@font/omnes_semibold"
+                android:fontFamily="@font/omnes_medium"
                 android:text="TextView"
                 android:textColor="#FFFFFF"
                 android:textSize="28sp" />
@@ -159,7 +160,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:fontFamily="@font/omnes_semibold"
+                android:fontFamily="@font/omnes_medium"
                 android:text="TextView"
                 android:textColor="#FFFFFF"
                 android:textSize="28sp" />
@@ -193,7 +194,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:fontFamily="@font/omnes_semibold"
+                android:fontFamily="@font/omnes_medium"
                 android:text="TextView"
                 android:textColor="#FFFFFF"
                 android:textSize="28sp" />
@@ -226,7 +227,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:fontFamily="@font/omnes_semibold"
+                android:fontFamily="@font/omnes_medium"
                 android:text="TextView"
                 android:textColor="#FFFFFF"
                 android:textSize="28sp" />
