--- a/app/src/main/res/layout/activity_inventario_entregas2.xml
+++ b/app/src/main/res/layout/activity_inventario_entregas2.xml
@@ -38,7 +38,7 @@
                 android:layout_width="82dp"
                 android:layout_height="50dp"
                 android:layout_marginStart="116dp"
-                android:src="@drawable/mercedesbenz" />
+                android:src="@drawable/boxicon" />
 
         </LinearLayout>
 
@@ -50,6 +50,7 @@
             android:layout_marginTop="24dp"
             android:layout_marginEnd="8dp"
             android:background="@drawable/rounded_listview"
+            android:backgroundTint="@color/amarillo_bamx"
             android:orientation="vertical"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -59,19 +60,22 @@
                 android:id="@+id/tv_inv_socio"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
+                android:layout_marginBottom="5dp"
                 android:fontFamily="@font/omnes_semibold"
                 android:text="Aurrera Plan de Ayala"
-                android:textColor="#FFFFFF"
+                android:textColor="#000000"
                 android:textSize="28sp" />
 
             <TextView
                 android:id="@+id/tv_inv_dir"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
                 android:fontFamily="@font/omnes_medium"
                 android:text="@string/Producto"
-                android:textColor="#FFFFFF"
-                android:textSize="24sp" />
+                android:textColor="#000000"
+                android:textSize="18sp" />
 
         </LinearLayout>
 
@@ -93,6 +97,7 @@
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
+                android:layout_marginStart="5dp"
                 android:layout_weight="1"
                 android:fontFamily="@font/omnes_semibold"
                 android:text="@string/str_abarrotes"
@@ -106,7 +111,10 @@
                 android:layout_gravity="center_vertical"
                 android:layout_weight="1"
                 android:ems="10"
-                android:inputType="number" />
+                android:fontFamily="@font/omnes_semibold"
+                android:inputType="number"
+                android:textAlignment="center"
+                android:textSize="20sp" />
 
         </LinearLayout>
 
@@ -128,6 +136,7 @@
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
+                android:layout_marginStart="5dp"
                 android:layout_weight="1"
                 android:fontFamily="@font/omnes_semibold"
                 android:text="@string/str_fruta"
@@ -141,7 +150,10 @@
                 android:layout_gravity="center_vertical"
                 android:layout_weight="1"
                 android:ems="10"
-                android:inputType="number" />
+                android:fontFamily="@font/omnes_semibold"
+                android:inputType="number"
+                android:textAlignment="center"
+                android:textSize="20sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -162,6 +174,7 @@
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
+                android:layout_marginStart="5dp"
                 android:layout_weight="1"
                 android:fontFamily="@font/omnes_semibold"
                 android:text="@string/str_pan"
@@ -175,7 +188,10 @@
                 android:layout_gravity="center_vertical"
                 android:layout_weight="1"
                 android:ems="10"
-                android:inputType="number" />
+                android:fontFamily="@font/omnes_semibold"
+                android:inputType="number"
+                android:textAlignment="center"
+                android:textSize="20sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -196,6 +212,7 @@
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
+                android:layout_marginStart="5dp"
                 android:layout_weight="1"
                 android:fontFamily="@font/omnes_semibold"
                 android:text="@string/str_nocomestible"
@@ -209,7 +226,10 @@
                 android:layout_gravity="center_vertical"
                 android:layout_weight="1"
                 android:ems="10"
-                android:inputType="number" />
+                android:fontFamily="@font/omnes_semibold"
+                android:inputType="number"
+                android:textAlignment="center"
+                android:textSize="20sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -230,6 +250,7 @@
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
+                android:layout_marginStart="5dp"
                 android:layout_weight="1"
                 android:fontFamily="@font/omnes_semibold"
                 android:text="@string/str_preparada"
@@ -243,7 +264,10 @@
                 android:layout_gravity="center_vertical"
                 android:layout_weight="1"
                 android:ems="10"
-                android:inputType="number" />
+                android:fontFamily="@font/omnes_semibold"
+                android:inputType="number"
+                android:textAlignment="center"
+                android:textSize="20sp" />
         </LinearLayout>
 
         <Button
@@ -253,7 +277,10 @@
             android:background="@drawable/rounded_corners25"
             android:backgroundTint="@color/verde_bamx"
             android:fontFamily="@font/omnes_semibold"
+            android:paddingStart="20dp"
+            android:paddingEnd="20dp"
             android:text="@string/strEnviar"
+            android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
