--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -61,9 +61,11 @@
                 android:layout_height="150dp"
                 android:layout_marginStart="20dp"
                 android:background="@drawable/rounded_corners25"
-                android:paddingLeft="30dp"
-                android:paddingRight="15dp"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp"
                 android:paddingBottom="15dp"
+                android:paddingTop="5dp"
+
                 android:scaleType="centerInside"
                 app:srcCompat="@drawable/mapicon" />
         </LinearLayout>
@@ -82,7 +84,7 @@
                 android:id="@+id/textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/shc_bodl"
+                android:fontFamily="@font/omnes_semibold"
                 android:paddingStart="65dp"
                 android:text="@string/Inventario"
                 android:textColor="#FFFFFF"
@@ -92,8 +94,8 @@
                 android:id="@+id/textView2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/shc_bodl"
-                android:paddingStart="120dp"
+                android:fontFamily="@font/omnes_semibold"
+                android:paddingStart="110dp"
                 android:text="@string/Rutas"
                 android:textColor="#FFFFFF"
                 android:textSize="20sp" />
@@ -115,7 +117,7 @@
                 android:layout_height="150dp"
                 android:layout_weight="1"
                 android:background="@drawable/rounded_corners25"
-                android:padding="35px"
+                android:padding="25px"
                 android:scaleType="centerInside"
                 app:srcCompat="@drawable/deliveryicon" />
 
@@ -126,6 +128,7 @@
                 android:layout_marginStart="20sp"
                 android:background="@drawable/rounded_corners25"
                 android:scaleType="centerInside"
+                android:padding="25px"
                 app:srcCompat="@drawable/deliverytruckicon" />
         </LinearLayout>
 
@@ -143,7 +146,7 @@
                 android:id="@+id/textView4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/shc_bodl"
+                android:fontFamily="@font/omnes_semibold"
                 android:paddingStart="47dp"
                 android:text="@string/Recolecciones"
                 android:textAlignment="textStart"
@@ -155,7 +158,7 @@
                 android:layout_width="222dp"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="60dp"
-                android:fontFamily="@font/shc_bodl"
+                android:fontFamily="@font/omnes_semibold"
                 android:paddingStart="82dp"
                 android:text="@string/Entregas"
                 android:textColor="#FFFFFF"
@@ -189,7 +192,7 @@
                 android:layout_marginStart="20dp"
                 android:layout_weight="1"
                 android:background="@drawable/rounded_corners25"
-                android:padding="35px"
+                android:padding="25px"
                 android:scaleType="centerInside"
                 app:srcCompat="@drawable/pickuptruckicon" />
         </LinearLayout>
@@ -208,7 +211,7 @@
                 android:layout_width="199dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:fontFamily="@font/shc_bodl"
+                android:fontFamily="@font/omnes_semibold"
                 android:paddingStart="82dp"
                 android:text="@string/Usuario"
                 android:textAlignment="textStart"
@@ -221,7 +224,7 @@
                 android:layout_height="match_parent"
                 android:layout_marginEnd="60dp"
                 android:layout_weight="1"
-                android:fontFamily="@font/shc_bodl"
+                android:fontFamily="@font/omnes_semibold"
                 android:paddingStart="100dp"
                 android:text="@string/Vehiculo"
                 android:textColor="#FFFFFF"
