--- a/app/src/main/res/layout/entrega_layout.xml
+++ b/app/src/main/res/layout/entrega_layout.xml
@@ -24,20 +24,20 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/omnes_bold"
-                android:paddingBottom="10dp"
                 android:text="TextView"
-                android:textAlignment="center"
-                android:textColor="#FFFFFF"
+                android:textAlignment="viewStart"
+                android:textColor="@color/gris_bamx"
                 android:textSize="21sp" />
 
             <TextView
                 android:id="@+id/tv_Bodega"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/omnes_bold"
+                android:fontFamily="@font/omnes_semibold"
+                android:paddingBottom="5dp"
                 android:text="TextView"
                 android:textAlignment="center"
-                android:textColor="#FFFFFF"
+                android:textColor="@color/amarillo_bamx"
                 android:textSize="21sp" />
 
             <TextView
@@ -48,7 +48,7 @@
                 android:paddingBottom="10dp"
                 android:text="TextView"
                 android:textAlignment="center"
-                android:textColor="#FFFFFF"
+                android:textColor="@color/white"
                 android:textSize="18sp" />
 
             <TextView
