--- a/app/src/main/res/layout/socio_layout.xml
+++ b/app/src/main/res/layout/socio_layout.xml
@@ -38,16 +38,17 @@
                 android:id="@+id/txt_NombreSocio"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/omnes_bold"
+                android:fontFamily="@font/omnes_medium"
                 android:text="TextView"
-                android:textColor="#FFFFFF"
+                android:textColor="@color/amarillo_bamx"
                 android:textSize="21sp" />
 
             <TextView
                 android:id="@+id/txt_DeterSocio"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/omnes_semibold"
+                android:fontFamily="@font/omnes_medium"
+                android:paddingBottom="5dp"
                 android:text="TextView"
                 android:textColor="#FFFFFF"
                 android:textSize="18sp" />
