--- a/app/src/main/res/layout/activity_inventario_completado.xml
+++ b/app/src/main/res/layout/activity_inventario_completado.xml
@@ -34,12 +34,26 @@
 
         </LinearLayout>
 
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/lottieAnimationView"
+            android:layout_width="270dp"
+            android:layout_height="173dp"
+            android:layout_marginTop="84dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.496"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:lottie_autoPlay="true"
+            app:lottie_fileName="check.json"
+            app:lottie_loop="false"
+            app:lottie_speed="1" />
+
         <TextView
             android:id="@+id/textView5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
-            android:layout_marginTop="224dp"
+            android:layout_marginTop="76dp"
             android:layout_marginEnd="32dp"
             android:fontFamily="@font/omnes_semibold"
             android:paddingLeft="20dp"
@@ -50,7 +64,7 @@
             android:textSize="34sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/LinearLayout" />
+            app:layout_constraintTop_toBottomOf="@+id/lottieAnimationView" />
 
         <Button
             android:id="@+id/btn_inv_menu"
