--- a/app/src/main/res/layout/activity_vehiculo.xml
+++ b/app/src/main/res/layout/activity_vehiculo.xml
@@ -127,10 +127,27 @@
             app:layout_constraintTop_toBottomOf="@+id/LinearLayout" />
 
         <Button
+            android:id="@+id/buttonCall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:background="@drawable/rounded_corners"
+            android:backgroundTint="@color/amarillo_bamx"
+            android:fontFamily="@font/omnes_semibold"
+            android:paddingLeft="20sp"
+            android:paddingRight="20sp"
+            android:text="@string/strLlamar"
+            android:textColor="#000000"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout17" />
+
+        <Button
             android:id="@+id/btn_vehiculo_inventario"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="38dp"
+            android:layout_marginTop="24dp"
             android:background="@drawable/rounded_corners"
             android:backgroundTint="@color/amarillo_bamx"
             android:fontFamily="@font/omnes_semibold"
@@ -141,7 +158,7 @@
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout17" />
+            app:layout_constraintTop_toBottomOf="@+id/buttonCall" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
