--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -71,16 +71,18 @@
 
     <Button
         android:id="@+id/btn_login"
-        android:layout_width="172dp"
-        android:layout_height="64dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="70dp"
         android:layout_marginEnd="16dp"
         android:background="@drawable/rounded_corners"
         android:backgroundTint="@color/rojo_bamx"
         android:fontFamily="@font/omnes_semibold"
+        android:paddingStart="15dp"
+        android:paddingEnd="15dp"
         android:text="@string/iniciar_sesion"
-        android:textSize="16sp"
+        android:textSize="20sp"
         app:cornerRadius="50px"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
